Fix: Fix text align in message text field

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -344,7 +344,7 @@ main {
     border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
+    text-align: left;
 }
 
 /* Footer */
